# roguelike-rust

./: .gitignore  project.godot
assets/character/knight/: Player.gd  Player.tscn  knight_f_hit_anim_f0.png.import  knight_f_idle_anim_f0.png.import  knight_f_idle_anim_f1.png.import  knight_f_idle_anim_f2.png.import  knight_f_idle_anim_f3.png.import  knight_f_run_anim_f0.png.import  knight_f_run_anim_f1.png.import  knight_red.tres  (+12 more)
autoload/Console/: Chandler.gd  Console.gd  Console.gdns  Console.tscn  Input.gd
autoload/DebugHUD/: DebugHUD.gd  DebugHUD.tscn  FPS.gd
autoload/SceneSwitcher/: SceneSwitcher.gd  SceneSwitcher.tscn  shards.png.import
autoload/SignalManager/: SignalManager.gd
fonts/: FiraCode.tres  TrojanBold12.tres  TrojanBold36.tres
lib/: libconsole.gdnlib  libworldgen.gdnlib
lib/src/worldgen/: Cargo.toml  build.sh  build_release.sh
lib/src/worldgen/src/: lib.rs
lib/src/worldgen/src/error/: mod.rs
lib/src/worldgen/src/map_types/: map_circle_rooms.rs  map_mixed_rooms.rs  map_square_rooms.rs  mod.rs
lib/src/worldgen/src/structures/: area.rs  circle.rs  map.rs  mod.rs  point.rs  square.rs  tile.rs
lib/src/worldgen/src/structures/rooms/: circle_room.rs  mod.rs  square_room.rs
lib/src/worldgen/src/tilemap/: mod.rs
lib/src/worldgen/src/utils/: mod.rs
lib/src/worldgen/src/utils/bitmasker/: mod.rs
lib/src/worldgen/src/utils/bitmasker/masker/: dungeon.rs  mod.rs
scenes/camera/: Camera.gd  Camera.tscn
scenes/debug/: CreateMapOverlay.gd  CreateMapOverlay.tscn
scenes/main_menu/: MainMenu.gd  MainMenu.tscn
theme/: button.tres
(+50 files in other folders)
