[package]
name = "worldgen"
version = "0.1.0"
authors = ["Olli Paananen <paananen.olli@tuta.io>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
rand = "0.8.4"
gdnative = "0.9.3"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
derive_more = "0.99.16"

# [profile.release]
# opt-level = 3
# lto = true
# codegen-units = 2
# panic = 'abort'
